[build-system]
requires = ["setuptools", 'docopt', 'packaging', 'requests', 'terminaltables', 'colorclass']
build-backend = "setuptools.build_meta"

[project]
name = "pip_ascent"
version = "0.1.0"
authors = [
  { name="Abdulazeez Sherif", email="abdoulazeezx@gmail.com" },
]
description = "A dynamic tool for upgrading pip requirements that seamlessly synchronizes the version changes within your requirements.txt file."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [        
    'Intended Audience :: Developers',
    'Topic :: Utilities',
    'License :: Public Domain',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

dynamic = ["license"]

[project.urls]
"Homepage" = "https://github.com/thisisazeez/pip-ascent"
"Bug Tracker" = "https://github.com/thisisazeez/pip-ascent/issues"